# homework_22_django

./: .gitignore  README.md  category.json  product.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: populate_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_alter_category_description_and_more.py  0003_contact.py  0004_contactinfo.py
config/: settings.py  urls.py
templates/: base.html  contacts.html  home.html  product_list.html  products_detail.html
templates/includes/: inc_menu.html
